--- a/app/components/GradientBackground/styles.module.css
+++ b/app/components/GradientBackground/styles.module.css
@@ -1,6 +1,6 @@
 .gradient {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
