--- a/app/components/Headline/styles.module.css
+++ b/app/components/Headline/styles.module.css
@@ -6,7 +6,6 @@
   left: 100px;
   font-size: 2.2rem;
   color: #fff;
-  z-index: 100;
 }
 
 .textWrapper {
