--- a/app/components/Navbar/styles.module.css
+++ b/app/components/Navbar/styles.module.css
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 100;
 }
 
 .navlist {
@@ -44,7 +43,6 @@
   transition: 0.5s ease-in-out;
   cursor: pointer;
   margin-top: -7px;
-  z-index: 100;
 }
 
 .navbtn span {
@@ -149,7 +147,7 @@
   }
 
   .navlist li {
-    font-size: 2rem;
+    font-size: 1.8rem;
     position: relative;
     padding-left: 10px;
   }
@@ -160,7 +158,7 @@
     content: '';
     width: 30px;
     height: 30px;
-    left: -30px;
+    left: -25px;
     top: 50%;
     transform: translateY(-50%);
     background-image: url('/logo/logo-notext.png');
